# wt_surrogate

NREL_5MW/5MW_Land_BD_DLL_WTurb/: 5MW_Land_BD_DLL_WTurb.AD.sum  5MW_Land_BD_DLL_WTurb.BD1.sum.yaml  5MW_Land_BD_DLL_WTurb.BD2.sum.yaml  5MW_Land_BD_DLL_WTurb.BD3.sum.yaml  5MW_Land_BD_DLL_WTurb.ED.sum  5MW_Land_BD_DLL_WTurb.SrvD.sum  5MW_Land_BD_DLL_WTurb.UA.sum  5MW_Land_BD_DLL_WTurb.ech  (+1 more)
wt_surrogate_repo/: .gitignore  CITATION.cff  LICENSE  README.md  Weight_Matrix.py  mrmr_select.py  pyproject.toml
wt_surrogate_repo/scripts/: build_npz_dataset.py  mrmr_select.py  train_surrogate.py
wt_surrogate_repo/weights/: w_blade_tip.npy  w_bottom.npy  w_corr_multi_target.npy  w_hub.npy  w_left.npy  w_right.npy  w_top.npy  w_yaw_gaussian_60deg.npy
wt_surrogate_repo/wt_surrogate/: __init__.py
wt_surrogate_repo/wt_surrogate/cli/: build_npz_dataset.py  mrmr_select.py  train_surrogate.py
wt_surrogate_repo/wt_surrogate/data/: __init__.py  build_dataset.py  dataset.py  npz_case.py  split.py
wt_surrogate_repo/wt_surrogate/data/dataset/data/: kept_features.json  manifest.csv  mimr_feature_scores.csv
wt_surrogate_repo/wt_surrogate/features/: PIFENet.py  __init__.py  otf.py  preprocess.py
wt_surrogate_repo/wt_surrogate/io/: __init__.py  openfast_out.py  turbsim_bts.py
wt_surrogate_repo/wt_surrogate/models/: __init__.py  dynamic_mlp.py
wt_surrogate_repo/wt_surrogate/selection/: __init__.py  mrmr.py
wt_surrogate_repo/wt_surrogate/training/: __init__.py  metrics.py  pipeline.py  scalers.py
wt_surrogate_repo/wt_surrogate/utils/: __init__.py  numpy.py  seed.py
(+23 files in other folders)
